fix: Update mobile navigation z-index.

--- a/src/layout/Header/MobileNavigation/classes.module.scss
+++ b/src/layout/Header/MobileNavigation/classes.module.scss
@@ -26,7 +26,7 @@
 
 .logo {
     position: relative; 
-    top: -2px;
+    top: -1px;
 }
 
 .icons {
