--- a/src/layout/Header/classes.module.scss
+++ b/src/layout/Header/classes.module.scss
@@ -10,3 +10,13 @@
     transition: color 300ms ease;
     max-width: 100vw;
 }
+
+.header.mobileNavigationOpen {
+    background-color: var(--theme-bg);
+    z-index: calc(var(--z-nav) + 12);
+    border-bottom: 1px solid var(--theme-border-color);
+
+    &:before, &:after {
+        opacity: 1;
+      }
+}
